# columnify.py

./: LICENSE.txt  README.md  pyproject.toml
columnify/: __about__.py  __init__.py  columnify.py
examples/: example.py
tests/: __init__.py
