[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "columnify"
description = 'To create text-based columnified (ls-like) content suitable for console output from a list of strings'
readme = "README.md"
requires-python = ">=3.10"
license = "MPL-2.0"
keywords = []
authors = [
  { name = "Johann Chang", email = "mr.changyuheng@gmail.com" },
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []
dynamic = ["version"]

[project.urls]
Issues = "https://github.com/changyuheng/columnify.py/issues"
Source = "https://github.com/changyuheng/columnify.py"

[tool.hatch.version]
path = "columnify/__about__.py"

[tool.hatch.build.targets.sdist]
[tool.hatch.build.targets.wheel]

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=columnify --cov=tests"
no-cov = "cov --no-cov"

[[tool.hatch.envs.test.matrix]]
python = ["310"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "columnify/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
